# cerebro_backtester

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py  tests.py
cerebro_backtester/: backtester_cerebro.py  run.py
